syntax = "proto3"; 
package GameMessage;

message ReqSecret
{
	string secret=1; 
}
message RspSecret
{
	string secret=1; 
}